tests/paczka2/big_fuzzy/46863851.err
Error in line 1: S705 A57 34,5
Error in line 8: ADc A57 8>,6
Error in line 5: S705 A768 72,8
Error in line 9: S705 S705 3,1
Error in line 23: h2bh A768 26,0
Error in line 24: h2bh A57 22,1
Error in line 27: vXJJ A768 56,7
Error in line 38: h2bh S454 62,6
Error in line 42: vXJJ A57 69,1
Error in line 46: ADc A768 38,3
Error in line 53: SL9r A57 30,2
Error in line 63: cgA S705 2,7
Error in line 62: vXJJ S705 80,3
Error in line 74: ADc A57 89,7
Error in line 75: ADc S705 90,1
Error in line 72: cgA S454 261,2
Error in line 76: ADc S454 53,4
Error in line 79: ADc A768 15,9
Error in line 95: S705 S454 41,05
Error in line 96: ADc S454 82,2
Error in line 101: vXJJ A57 94,1
Error in line 108: cgA S705 19,1
Error in line 110: XlQ A768 99,4
Error in line 112: XlQ S705 21,3
Error in line 104: S705 S454 175,1
Error in line 121: SL9r A57 9,0
Error in line 123: SL9r S705 35,0
Error in line 134: ADc S454 -1,1
Error in line 138: XlQ A57 2,6
Error in line 137: cgA S454 10,9
Error in line 144: h2bh A768 87,2
Error in line 130: ADc S454 93,9
Error in line 148: ADc S705 77,0
Error in line 150: SL9r A57 74,7
Error in line 162: SL9r S705 -3,5
Error in line 161: SL9r S705 62,9
Error in line 164: SL9r A57 46,6
Error in line 165: ADc A57 68,5
Error in line 167: cgA A768 62,3
Error in line 176: S705 S454 8,6
Error in line 179: ADc S705 25,2
Error in line 184: S705 A57 1,6
Error in line 195: vXJJ S454 94,0
Error in line 207: vXJJ A768 27,6
Error in line 203: h2bh S705 294,5
Error in line 205: XlQ A768 7,4
Error in line 216: XlQ S705 29,7
Error in line 217: SL9r A768 49,5
Error in line 225: SL9r S454 64,9
Error in line 238: S705 S454 39,9
Error in line 246: S705 A768 22,0
Error in line 247: S705 S454 77,1
